june   22, 2001 : Otto Bruggeman
	Tried implementing rcs and ed but they dont work atm, same for show
	diffstats, will fix that asap.
may    22, 2001 : John Firebaugh
	Reworking of most of the view code. Looks pretty.
may    18, 2001 : Otto Bruggeman
	Context seems to work, implemented saving... might have some problems
	left (saving that is)
may    15, 2001 : John Firebaugh
	Make the settings work for all windows. Probably some more changes :)
may    14, 2001 : Otto Bruggeman
	context diff does not work atm, there is some problem with the separa-
	tion of old and new. Maybe the old and new needs to be reintegrated.
	I fixed some functions and now diffmodel does no longer need static
	functions. All loading is done from the kdiffpart and that is where
	save should go as well. Removed determineDiffFormat because it is not
	needed anymore.
may    13, 2001 : Otto Bruggeman
	contextdiff is better implemented it finds all stuff in the diff atm
	but it does not work.
may     4, 2001 : Otto Bruggeman
	cleaned up the code by moving the part to a subdir
	halfassed implementation of contextdiff, will update later today
april  10, 2001 : John Firebaugh
	use new model/view architecture (not completely implemented yet)
	NOTE: it will (should) compile, but you won't see any differences... a
	work in progress
april  5th, 2001 : Otto Bruggeman
	Implemented the ability to move from chuck to chunk in the htmlview
	Cleaned up the preferences, squashed a few bugs
april  4th, 2001 : Otto Bruggeman
	Normal format works as well
april  4th, 2001 : Otto Bruggeman
	Finally implemented the preferences menu... i still lack some nice 
	icons for it but that will be solved in the near future...
march 25th, 2001 : Otto Bruggeman
	Moved the application icons to the pics dir
march 20th, 2001 : Otto Bruggeman
	Fixed a stupid bug that caused the last line in the rightview not
	to be colored.
	Implemented slots for using the KHistoryCombo in the views to select
	files with.